# brfss-diabetes-surveys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.dvc/: config
.github/workflows/: releases.yml  tests.yml
brfss_diabetes_surveys_etl/data/clean/: LLCP2024.parquet.dvc
brfss_diabetes_surveys_etl/docs/: .gitignore  USCODE24_LLCP_082125.HTML.dvc
brfss_diabetes_surveys_etl/notebooks/: etl_poc.ipynb  etl_poc_2024.ipynb
brfss_diabetes_surveys_etl/src/main/configs/cleaners/: data_cleaner.py  description_cleaner.py
brfss_diabetes_surveys_etl/src/main/configs/loaders/: data_loader.py  description_loader.py
brfss_diabetes_surveys_etl/src/tests/integration/: test_etl_pipeline.py
brfss_diabetes_surveys_ml/notebooks/: eda_poc.ipynb  eda_poc_2024.ipynb
data/: .gitignore  LLCP2024.XPT.dvc  us-pr-surveys.parquet.dvc
notebooks/: etl_poc.ipynb  ml_poc.ipynb  us-pr-diabetes-trends-2000-2014.ipynb
notebooks/.ipynb_checkpoints/: us-pr-diabetes-trends-2000-2014-checkpoint.ipynb
notebooks/2024/: etl-poc.ipynb  surveys-etl-poc.ipynb
src/main/configs/loaders/: data_loader.py
src/main/notebooks/: us-pr-diabetes-trends-2000-2014.ipynb
src/main/scripts/cleaners/: data_cleaner.py  description_cleaner.py
src/main/scripts/loaders/: data_loader.py  description_loader.py  utils.py
src/tests/unit/cleaners/: test_data_cleaner.py  test_description_cleaner.py
src/tests/unit/loaders/: data_loader_test.py  test_data_loader.py  test_description_loader.py  test_utils.py
src/tests/unit/loaders/fixtures/: samples.parquet.dvc
(+18 files in other folders)
