[project]
name = "us-pr-diabetes-trends-2000-2014"
version = "0.1.0"
description = "How did lifestyle impact diabetes in the US and Puerto Rico from 2000 to 2014 ?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.66.1",
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
