[project]
name = "brfss-diabetes-surveys"
version = "0.1.0"
description = "Can BRFSS surveys provide insights into specific characteristics of people with diabetes or prediabetes ?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.66.1",
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter-client>=8.8.0",
    "jupyterlab>=4.5.3",
    "jupyterlab-sos>=0.11.0",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas==3.0.0",
    "pyreadstat>=1.3.2",
    "scikit-learn>=1.8.0",
    "sos-notebook>=0.24.4",
    "sos-papermill>=0.2.1",
    "sos-r>=0.20.1",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
